--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm-run-all -p dev watch-css",
     "dev": "webpack-dev-server --hot --inline --watch-content-base --content-base public/ --open-page index.html ",
-    "build": "webpack",
+    "build": "webpack && npm run build-css",
     "deploy": "npm run build && firebase deploy",
     "build-css": "node-sass-chokidar src/scss/style.scss -o public/",
     "watch-css": "npm run build-css && node-sass-chokidar src/scss/style.scss -o public/ --watch --recursive",
